--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,19 +3,21 @@
     "short_name": "AnimeStream",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#2d2850",
-    "theme_color": "#53ff86",
+    "background_color": "#131022",
+    "theme_color": "#4725f4",
     "description": "Nonton anime subtitle Indonesia terlengkap dan terupdate.",
     "icons": [
         {
-            "src": "https://backapi.oploverz.ac/uploads/settings/website/favicons/3161ce4d-ce90-4d07-b019-57bf64a9594e.png",
-            "sizes": "192x192",
-            "type": "image/png"
+            "src": "/icon.svg",
+            "sizes": "any",
+            "type": "image/svg+xml",
+            "purpose": "any"
         },
         {
-            "src": "https://backapi.oploverz.ac/uploads/settings/website/favicons/3161ce4d-ce90-4d07-b019-57bf64a9594e.png",
+            "src": "/icon.svg",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/svg+xml",
+            "purpose": "maskable"
         }
     ]
 }
